--- a/src/Component/Contact/Contact.css
+++ b/src/Component/Contact/Contact.css
@@ -67,3 +67,9 @@ form .btn:hover{
     font-size: 18px;
 }
 
+@media screen and (max-width: 380px) {
+    .contact{
+       
+        height: 120vh;
+    }
+}
