--- a/src/Component/Navbar/Header.css
+++ b/src/Component/Navbar/Header.css
@@ -13,7 +13,7 @@ nav.navbar{
 }
 
 .navbar a.navbar-brand{
-    width: 9%;
+    width:15%;
 }
 
 .navbar-nav .nav-link{
@@ -181,5 +181,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
         padding: 5px;
 
     }
+    nav.navbar{
+       background-color: rgba(18, 18, 18, 0.785);
+    }
 
 }
+
+
